The logo is now a link to homepage, and courser is fixed on hover

--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
     <button onclick="quickLoad('video')">Videos</button>
 	-->
 	 <div class="navbar">
-        <img id="logo" src="images\logo\ExcellenceLogo-small.png">
+        <img id="logo" src="images\logo\ExcellenceLogo-small.png" onclick="quickLoad('home')">
         <!--Knapp Contact-->
         <div class="dropdown">
             <button class="dropbtn" onclick="dropdownFunction(3)">CONTACT <i class="fa fa-caret-down" aria-hidden="true"></i></button>
