--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="styles/Navbar.css" >
   <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/video.css">
+  <link rel="stylesheet" href="styles/faq.css">
 
   <script src="scripts/document_loader.js" type="text/javascript"></script>
   <script src="scripts/Navbar.js" type="text/javascript"></script>
