All the facebook and youtube icons are new links

--- a/website/index.html
+++ b/website/index.html
@@ -124,10 +124,10 @@
       <button onclick="quickLoad('guestbook')">Guestbook</button>
     </div>
     <div class="social-media">
-      <a href="https://www.facebook.com/"><img src="images/facebook.png"></a>
+      <a href="https://www.facebook.com/ExcellenceTheBand/" target="_blank"><img src="images/facebook.png"></a>
     </div>
     <div class="social-media">
-      <a href="https://www.youtube.com/"><img src="images/youtube.png"></a>
+      <a href="https://www.youtube.com/channel/UCt_tQ5NVWdAlNw99x5V9ewA" target="_blank"><img src="images/youtube.png"></a>
     </div>
 
   </footer>
