--- a/website/index.html
+++ b/website/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:700" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" />
   <link rel="stylesheet" href="styles/main.css"/>
-  <link rel="stylesheet" href="styles/Navbar.css" >
+  <link rel="stylesheet" href="styles/navbar.css" >
   <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/video.css">
   <link rel="stylesheet" href="styles/faq.css">
 
   <script src="scripts/document_loader.js" type="text/javascript"></script>
-  <script src="scripts/Navbar.js" type="text/javascript"></script>
+  <script src="scripts/navbar.js" type="text/javascript"></script>
 
 
   <title>Excellence</title>
@@ -23,17 +23,6 @@
 
 
   <nav>
-    <!-- TODO: Navigation bar elements will go here
-    <button onclick="quickLoad('home')">Home</button>
-    <button onclick="quickLoad('about')">About</button>
-    <button onclick="quickLoad('contactus')">Contact Us</button>
-    <button onclick="quickLoad('discography')">Discography</button>
-    <button onclick="quickLoad('faq')">FAQ</button>
-    <button onclick="quickLoad('guestbook')">Guestbook</button>
-    <button onclick="quickLoad('tourdate')">Tour Dates</button>
-    <button onclick="quickLoad('pictures')">Pictures</button>
-    <button onclick="quickLoad('video')">Videos</button>
-	-->
 	 <div class="navbar">
         <img id="logo" src="images\logo\ExcellenceLogo-small.png" onclick="quickLoad('home')">
 
@@ -95,42 +84,43 @@
   </main>
 
   <footer>
-    <!-- TODO: Footer will go here -->
     <div class="footerImg">
       <img src="images/logo/ExcellenceLogo-small.png" onclick="quickLoad('home')">
     </div>
-    <div class = "buttons">
+    <div class="row">
+    <div class="sitemap buttons">
       <h2>Home</h2>
       <button onclick="quickLoad('home')">Home</button>
     </div>
-    <div class = "buttons">
+    <div class="sitemap buttons">
       <h2>About</h2>
       <button onclick="quickLoad('about')">About</button>
       <button onclick="quickLoad('faq')">FAQ</button>
       <button onclick="quickLoad('discography')">Discography</button>
     </div>
-    <div class = "buttons">
+    <div class="sitemap buttons">
       <h2>Concert</h2>
       <button onclick="quickLoad('tourdate')">Tour Dates</button>
     </div>
-    <div class = "buttons">
+    <div class="sitemap buttons">
       <h2>Media</h2>
       <button onclick="quickLoad('pictures')">Pictures</button>
       <button onclick="quickLoad('video')">Videos</button>
     </div>
-    <div class = "buttons">
+    <div class="sitemap buttons">
       <h2>Contact</h2>
       <button onclick="quickLoad('contactus')">Contact Us</button>
       <button onclick="quickLoad('guestbook')">Guestbook</button>
     </div>
+  </div>
+    <div class="row">
     <div class="social-media">
       <a href="https://www.facebook.com/ExcellenceTheBand/" target="_blank"><img src="images/facebook.png"></a>
     </div>
     <div class="social-media">
       <a href="https://www.youtube.com/channel/UCt_tQ5NVWdAlNw99x5V9ewA" target="_blank"><img src="images/youtube.png"></a>
     </div>
-
+  </div>
   </footer>
-<script type="text/javascript" src="scripts/Navbar.js"></script>
 </body>
 </html>
