--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,15 @@
   <link rel="stylesheet" href="styles/video.css">
   <link rel="stylesheet" href="styles/faq.css">
 
+  <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+  <link rel="manifest" href="images/favicons/manifest.json">
+  <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Excellence">
+  <meta name="application-name" content="Excellence">
+  <meta name="theme-color" content="#ffffff">
+
   <script src="scripts/document_loader.js" type="text/javascript"></script>
   <script src="scripts/navbar.js" type="text/javascript"></script>
 
