--- a/website/index.html
+++ b/website/index.html
@@ -1,19 +1,29 @@
-﻿<!DOCTYPE html>
-
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--
+  FILE NAME: index.html
+  WRITTEN BY: Sigrid Marita Kvamme, Håvard Bjerke,
+              Kristoffer Håkonsen, Caroline Stensland Selte
+  WHEN: October/November 2017
+  PURPOSE: Base html with navbar, footer and a content div.
+  */
+  -->
   <meta charset="UTF-8">
+  <title>Excellence</title>
 
+  <!-- Fonts, icons and stylesheets-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:700" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" />
   <link rel="stylesheet" href="styles/main.css"/>
   <link rel="stylesheet" href="styles/navbar.css" >
   <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css">
 
+  <!-- Javascript -->
   <script src="scripts/document_loader.js" type="text/javascript"></script>
   <script src="scripts/navbar.js" type="text/javascript"></script>
 
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
@@ -22,8 +32,6 @@
   <meta name="apple-mobile-web-app-title" content="Excellence">
   <meta name="application-name" content="Excellence">
   <meta name="theme-color" content="#ffffff">
-
-  <title>Excellence</title>
 </head>
 <body>
 
@@ -124,5 +132,5 @@
       </ul>
     </div>
   </footer>
-</body>
+  </body>
 </html>
