Added comments, documentation and fixed errors

--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <!--
@@ -38,7 +38,7 @@
   <!-- Navigation bar -->
   <nav>
 	 <div class="navbar">
-        <img id="logo" src="images\logo\ExcellenceLogo-small.png" onclick="quickLoad('home')">
+        <img id="logo" src="images/logo/ExcellenceLogo-small.png" onclick="quickLoad('home')">
 
         <!--Dropdown button for small screens-->
         <button class="icon" onclick="smallDropDown()">&#9776;</button>
