- Add alt-attributes to some images  - Fix validation error with <emph> in guestbook

--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
   <!-- Navigation bar -->
   <nav>
 	 <div class="navbar">
-        <img id="logo" src="images\logo\ExcellenceLogo-small.png" onclick="quickLoad('home')">
+        <img id="logo" alt="Excellence logo" src="images/logo/ExcellenceLogo-small.png" onclick="quickLoad('home')">
 
         <!--Dropdown button for small screens-->
         <button class="icon" onclick="smallDropDown()">&#9776;</button>
@@ -97,7 +97,7 @@
   <!-- Footer -->
   <footer>
     <div class="footerImg">
-      <img src="images/logo/ExcellenceLogo-small.png" onclick="quickLoad('home')">
+      <img src="images/logo/ExcellenceLogo-small.png" alt="Excellence logo" onclick="quickLoad('home')">
     </div>
     <div id="sitemap-wrapper">
       <div class="sitemap buttons">
@@ -127,8 +127,8 @@
     </div>
     <div class="socialmedia-wrapper">
       <ul>
-        <li><a href="https://www.facebook.com/ExcellenceTheBand/" target="_blank"><img class="social-media" src="images/facebook.png"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCt_tQ5NVWdAlNw99x5V9ewA" target="_blank"><img class="social-media" src="images/youtube.png"></a></li>
+        <li><a href="https://www.facebook.com/ExcellenceTheBand/" target="_blank"><img alt="Facebook logo" class="social-media" src="images/facebook.png"></a></li>
+        <li><a href="https://www.youtube.com/channel/UCt_tQ5NVWdAlNw99x5V9ewA" target="_blank"><img alt="Youtube logo" class="social-media" src="images/youtube.png"></a></li>
       </ul>
     </div>
   </footer>
