fixed alt in images in pictures

--- a/design_docs/P3_changes.html
+++ b/design_docs/P3_changes.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="main.css"/>
   <title>Title</title>
 </head>
 <body>
+  <header>
+    <h1>IT2805 Design Planning</h1>
+    <p>
+      Group 15 <br/>
+      Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme
+      <br/>
+      Monday, 13th of November, 2017
+    </p>
+  </header>
+  <main>
+    <section>
+      <h2>1. Link to Start page</h2>
+      <p>
+      Our client is the imaginary band Excellence.
+      </p>
+    </section>
 
+    <section>
+      <h2>2. Minimum Requirements</h2>
+      <p>
+      Our client is the imaginary band Excellence.
+      </p>
+    </section>
+
+    <section>
+      <h2>1. Link to Start page</h2>
+      <p>
+      Our client is the imaginary band Excellence.
+      </p>
+    </section>
+
+
+
+
+
+    <footer>
+      by Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme <br>
+      November 2017
+    </footer>
+  </main>
 </body>
 </html>
