added list for testing questions

--- a/design_docs/P4_testing.html
+++ b/design_docs/P4_testing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -25,7 +25,17 @@
 
     <section>
       <h2>2. Testing Document</h2>
-      <p></p>
+      <p>
+          Here is the questions we asked the testers:
+          <ol>
+              <li>When is the next concert?</li>
+              <li>What does the band’s studio look like?</li>
+              <li>Can you find their Facebook page?</li>
+              <li>Can you leave a message for the band?</li>
+              <li>What is the name of their first album?</li>
+              <li>Is there some information that are missing from the page or something that should be here?</li>
+          </ol>
+      </p>
     </section>
 
     <section>
