- Add initial changes for P3

--- a/design_docs/P3_changes.html
+++ b/design_docs/P3_changes.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="main.css"/>
-  <title>Title</title>
+  <title>Project changes</title>
 </head>
 <body>
   <header>
-    <h1>IT2805 Design Planning</h1>
+    <h1>IT2805 Project 3 changes</h1>
     <p>
       Group 15 <br/>
       Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme
@@ -17,29 +17,38 @@
   </header>
   <main>
     <section>
-      <h2>1. Link to Start page</h2>
+      <h2>1. Link to home page</h2>
       <p>
       Our client is the imaginary band Excellence.
+      </p>
+      <p>
+      <strong>Note:</strong> The website will not work from file:// if you use Chrome due to restrictions on cross-origin requests. An online version is hosted below on folk.ntnu.no:
+      </p>
+      <p>
+      <a target="_blank" href="http://folk.ntnu.no/haavabj/Webtek/?home">EXCELLENCE home page</a><br/>
+      <a target="_blank" href="index.html">EXCELLENCE home page (local)</a><br/>
       </p>
     </section>
 
     <section>
-      <h2>2. Minimum Requirements</h2>
+      <h2>2. Changes to the specification</h2>
       <p>
-      Our client is the imaginary band Excellence.
+        <strong>Navbar transparency:</strong> On the home page, the navbar was made transparent in order to blend better with the background. This decision was made for aesthetic reasons.
+        This was implemented as a CSS rule specifically for the home.html document.
+      </p>
+      <p>
+        <strong>Font sizes:</strong> Font sizes in general were changed due to the mockups being made in Photoshop, which did not measure the size of elements in screen-size pixels. Sizes in pixels were changed into relative "em" sizes, making it more predictable when working with high DPI screens such as mobile devices.
+      </p>
+      <p>
+        <strong>Mobile fixes:</strong> In order to further facilitate a mobile version, a minimized version of the navbar (commonly referred to as a hamburger) was added when browsing from a mobile device. The usability of this version was significantly better than the normal navbar, because it does not require precision to hit the links. In addition to this, margins and other spacing was reduced when browsing from a high-resolution device in order to make it more readable.
+      </p>
+      <p>
+        <strong>Removing a header image:</strong> On the video.html page, the header image was removed, seeing as it would be superfluous when there are videos on the page.
+      </p>
+      <p>
+        <strong>Adding shadows:</strong> On the home.html page, shadow was added to the large Excellence text in the center of the page, in order to make it more visible.
       </p>
     </section>
-
-    <section>
-      <h2>1. Link to Start page</h2>
-      <p>
-      Our client is the imaginary band Excellence.
-      </p>
-    </section>
-
-
-
-
 
     <footer>
       by Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme <br>
