added minimum requirements and final work division

--- a/design_docs/P3_changes.html
+++ b/design_docs/P3_changes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -49,6 +49,100 @@
         <strong>Adding shadows:</strong> On the home.html page, shadow was added to the large Excellence text in the center of the page, in order to make it more visible.
       </p>
     </section>
+      <section>
+       <ol>
+           <li>
+               <strong>How each team member fulfilled their minimum requirements</strong>
+               <ul>
+                   <li><strong>Sigrid</strong> fulfilled her JavaScript requirements with the discography.js file, which generated albums from Javascript to keep the HTML docyment dry.</li> 
+                    <li> <strong>Caroline</strong> wrote splash_image.js which makes the front image fade in. </li>
+                   <li><strong>Kristoffer</strong> wrote severel of the functions in navbar.js to create the 2 dropdown navigationbars.</li>
+                   <li><strong>Håvard</strong> wrote guestbook.js which creates a guestbook where the user can leave a comment, and documentloader.js which dynamically loads pages and stylesheets.</li>
+               page.
+              </ul>
+           </li>
+           <li>
+               <strong>Final work division </strong>
+               <table>
+                   <tr>
+                       <th>File</th>
+                       <th>Assigned person</th>
+                   </tr>
+                   <tr>
+                       <td>index.html</td>
+                       <td>All</td>
+                   </tr>
+                   <tr>
+                       <td>home.html</td>
+                       <td>Sigrid</td>
+                   </tr>
+                   <tr>
+                       <td>about.html</td>
+                       <td>Håvard</td>
+                   </tr>
+                   <tr>
+                       <td>faq.html</td>
+                       <td>Kristoffer</td>
+                   </tr>
+                   <tr>
+                       <td>discography.html</td>
+                       <td>Sigrid</td>
+                   </tr>
+                   <tr>
+                       <td>tourdates.html</td>
+                       <td>Sigrid</td>
+                   </tr>
+                   <tr>
+                       <td>pictures.html</td>
+                       <td>Caroline</td>
+                   </tr>
+                   <tr>
+                       <td>video.html</td>
+                       <td>Kristoffer</td>
+                   </tr>
+                   <tr>
+                       <td>contactus.html</td>
+                       <td>Caroline</td>
+                   </tr>
+                   <tr>
+                       <td>guestbook.html</td>
+                       <td>Håvard</td>
+                   </tr>
+                   <tr>
+                       <td>main.css</td>
+                       <td>All</td>
+                   </tr>
+                   <tr>
+                       <td>home.css</td>
+                       <td>All</td>
+                   </tr>
+                   <tr>
+                       <td>guestbook.js</td>
+                       <td>Håvard</td>
+                   </tr>
+                   <tr>
+                       <td>splash_image.js</td>
+                       <td>Caroline</td>
+                   </tr>
+                   <tr>
+                       <td>document_loader.js</td>
+                       <td>Håvard</td>
+                   </tr>
+                   <tr>
+                       <td>discography.js</td>
+                       <td>Sigrid</td>
+                   </tr>
+                   <tr>
+                       <td>dropdown.js</td>
+                       <td>Kristoffer</td>
+                   </tr>
+               </table>
+           </li>
+           <li>
+
+           </li>
+       </ol>
+      </section>
 
     <footer>
       by Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme <br>
