fixed testing document

--- a/design_docs/P4_testing.html
+++ b/design_docs/P4_testing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>IT2805 Design Planning</h1>
+    <h1>IT2805 Project Testing</h1>
     <p>
       Group 15 <br/>
       Caroline Stensland Selte, Håvard Bjerke, Kristoffer Håkonsen, Sigrid Marita Kvamme
@@ -26,6 +26,9 @@
     <section>
       <h2>2. Testing Document</h2>
       <p>
+        To test the website we used live testing.
+      </p>
+      <p>
           Here is the questions we asked the testers:
           <ol>
               <li>When is the next concert?</li>
@@ -33,34 +36,93 @@
               <li>Can you find their Facebook page?</li>
               <li>Can you leave a message for the band?</li>
               <li>What is the name of their first album?</li>
-              <li>Is there some information that are missing from the page or something that should be here?</li>
+              <li>Are there any information that you think are missing from the website?</li>
           </ol>
       </p>
     </section>
 
     <section>
       <h2>3. Tester Audience</h2>
-      <p></p>
+      <p>
+        When testing our website we wanted people in the our target group to test it.
+        The band’s intended audience and target group is young adults in the age group 18 to 30 years old.
+        In total we had five different people testing the website. Three of them were studying computer
+        science, and we think that they will probably be more critical to the website and the technology we
+        used compared to other people in our target group.
+      </p>
     </section>
 
     <section>
       <h2>4. Testing Platforms</h2>
-      <p></p>
+      <p>
+        We wanted our testers to test the website on a wide variety of devices and browsers, to ensure
+        good results. We have tested the website on Macbook, iPad, Samsung tablet, PC, iPhone and Android phone.
+        The browsers used for the testing are Google Chrome, Safari, Samsung internet and Firefox.
+        Support for Microsoft Edge and Internet Explorer was not planned, and as such was not tested.
+      </p>
     </section>
 
     <section>
       <h2>5. Feedback Summary</h2>
-      <p></p>
+      <p>
+        Generally we have gotten positive feedback on our website from the testers. They think the design is really nice.
+        To make it easy we have written some of the responses on the questions we asked here.
+        <ol>
+            <li class="feedback">When is the next concert?
+            <p>All testers thought this was easy and found the next concert on their first attempt.</p></li>
+            <li class="feedback">What does the band’s studio look like?
+            <p>This one was a little harder. Two of the testers first tried the page called “About Excellence”,
+            but could not found it here. When it was not here their next attempt as the picture page under media.</p></li>
+            <li class="feedback">Can you find their Facebook page?
+            <p>To find their Facebook page the testers didn’t use the footer, instead they went to contact and
+            “Contact Us”.</p></li>
+            <li class="feedback">Can you leave a message for the band?
+            <p>The testers immediately found the guestbook where they can leave a message.</p></li>
+            <li class="feedback">What is the name of their first album?
+            <p>This one also was a little trickier because some of the testers didn’t know what a discography is.
+            First they tried to found Excellence first album under “About Excellence”, and when they couldn’t find
+            it here they just searched around on the web page and found it under “Discography” by an accident.</p></li>
+            <li class="feedback">Are there any information that you think are missing from the website?
+            <p>One of the testers missed information that explicitly tells that Excellence is a band.</p></li>
+        </ol>
+      </p>
     </section>
 
     <section>
       <h2>6. Your Response</h2>
-      <p></p>
+      <p>
+        From the testing we saw that some thought it was difficult to find the picture of the studio and the
+        discography. To solve the problem about the studio picture maybe we should have this picture under
+        “About Excellence” instead of having it with the other pictures from the concerts. In addition we should
+        also make it easier for people to find the discography. Maybe we should rename the section
+        from “Discography” to “Music” or “Albums” to make it more user friendly for people who is not that
+        familiar with music terminology.
+      </p>
     </section>
 
     <section>
       <h2>7. Self Reflection</h2>
-      <p></p>
+      <p>
+        First of all this project has been very good for learning. Not only the have we learned HTML, CSS and
+        JavaScript, but we have also learned about project work and organizing. It is really cool that we got
+        the opportunity to try out something that feels like a real project. Even though we did not have a
+        real client the project felt realistic because we had to write the requirements and plan the design
+        before starting to actually program the website.
+      </p>
+      <p>
+        We have learned a lot about programming group projects, how to organize our work, and how messy it gets.
+         We found that Git and GitHub were excellent tools, but they were difficult to start out with, but in
+         the end very rewarding. The most challenging part of the project was combine it into a single project.
+         In the beginning everyone was working on their own documents and code, and a lot of complications arose
+         when we combined our work. At this point it was very helpful to have a good plan and lots of meetings,
+         and we got it working with enough work.
+      </p>
+      <p>
+        Something we have learned from this project that we will do different the next time is to use a task
+        manager. This time we only used the table we made in the design document for task management, but this
+        was not dynamic. A task manager will make it easier to see how far we have gotten with the project
+        and which tasks that are remaining.
+      </p>
     </section>
 
   <footer>
