Small changes to the test doc

--- a/design_docs/P4_testing.html
+++ b/design_docs/P4_testing.html
@@ -68,21 +68,21 @@
         Generally we have gotten positive feedback on our website from the testers. They think the design is really nice.
         To make it easy we have written some of the responses on the questions we asked here.
         <ol>
-            <li class="feedback">When is the next concert?
+            <li><strong>When is the next concert?</strong>
             <p>All testers thought this was easy and found the next concert on their first attempt.</p></li>
-            <li class="feedback">What does the band’s studio look like?
+            <li><strong>What does the band’s studio look like?</strong>
             <p>This one was a little harder. Two of the testers first tried the page called “About Excellence”,
             but could not found it here. When it was not here their next attempt as the picture page under media.</p></li>
-            <li class="feedback">Can you find their Facebook page?
+            <li><strong>Can you find their Facebook page?</strong>
             <p>To find their Facebook page the testers didn’t use the footer, instead they went to contact and
             “Contact Us”.</p></li>
-            <li class="feedback">Can you leave a message for the band?
+            <li><strong>Can you leave a message for the band?</strong>
             <p>The testers immediately found the guestbook where they can leave a message.</p></li>
-            <li class="feedback">What is the name of their first album?
+            <li><strong>What is the name of their first album?</strong>
             <p>This one also was a little trickier because some of the testers didn’t know what a discography is.
             First they tried to found Excellence first album under “About Excellence”, and when they couldn’t find
             it here they just searched around on the web page and found it under “Discography” by an accident.</p></li>
-            <li class="feedback">Are there any information that you think are missing from the website?
+            <li><strong>Are there any information that you think are missing from the website?</strong>
             <p>One of the testers missed information that explicitly tells that Excellence is a band.</p></li>
         </ol>
       </p>
