Style changes in P3

--- a/design_docs/P3_changes.html
+++ b/design_docs/P3_changes.html
@@ -17,7 +17,7 @@
   </header>
   <main>
       <section>
-        <h2>1. Link to home page</h2>
+        <h2>Link to home page</h2>
         <p>
           Our client is the imaginary band Excellence.
         </p>
@@ -31,7 +31,7 @@
       </section>
 
       <section>
-          <h2>2. Changes to the specification</h2>
+          <h2>Changes to the specification</h2>
           <p>
             <strong>Navbar transparency:</strong> On the home page, the navbar was made transparent in order to blend better with the background. This decision was made for aesthetic reasons.
             This was implemented as a CSS rule specifically for the home.html document.
@@ -48,20 +48,18 @@
           <p>
             <strong>Adding shadows:</strong> On the home.html page, shadow was added to the large Excellence text in the center of the page, in order to make it more visible.
           </p>
-        </section>
-        <section>
-        <ol>
-          <li>
-            <strong>How each team member fulfilled their minimum requirements</strong>
+      </section>
+      <section>
+        <h2>Fulfilling the minimum requirements</h2>
+            <p>This is how each team member fulfilled their minimum requirements:</p>
             <ul>
-              <li><strong>Sigrid</strong> fulfilled her JavaScript requirements with the discography.js file, which generated albums from Javascript to keep the HTML docyment dry.</li> 
+              <li><strong>Sigrid</strong> fulfilled her JavaScript requirements with the discography.js file, which generated albums from Javascript to keep the HTML docyment dry.</li>
               <li> <strong>Caroline</strong> wrote splash_image.js which makes the front image fade in. </li>
               <li><strong>Kristoffer</strong> wrote severel of the functions in navbar.js to create the 2 dropdown navigationbars.</li>
               <li><strong>Håvard</strong> wrote guestbook.js which creates a guestbook where the user can leave a comment, and documentloader.js which dynamically loads pages and stylesheets.</li>
             </ul>
-          </li>
-          <li>
-            <strong>Final work division </strong>
+        <h2>Final work division </h2>
+        <p>Based on the work division from P2 this is the updated version on how the work was divided:</p>
             <table>
               <tr>
                 <th>File</th>
@@ -136,12 +134,9 @@
               <td>Kristoffer</td>
             </tr>
             </table>
-          </li>
-          <li>
-            <strong>How was modularity handled?</strong><br/>
-            Modularity is handled by only loading the &lt;main&gt; component per page, along with a couple of style sheets where applicable. The Javascript code for this is found in document_loader.js. It uses XMLHttpRequests to download the .html files (which only contain &lt;main&gt;) and replaces the current &lt;main&gt; element. This allows the website to transition between the pages without blinking or reloading the navbar and footer.
-          </li>
-        </ol>
+
+        <h2>How was modularity handled?</h2>
+            <p>Modularity is handled by only loading the &lt;main&gt; component per page, along with a couple of style sheets where applicable. The Javascript code for this is found in document_loader.js. It uses XMLHttpRequests to download the .html files (which only contain &lt;main&gt;) and replaces the current &lt;main&gt; element. This allows the website to transition between the pages without blinking or reloading the navbar and footer.</p>
     </section>
 
     <footer>
