- Complete paragraph on modularity

--- a/design_docs/P3_changes.html
+++ b/design_docs/P3_changes.html
@@ -16,127 +16,127 @@
     </p>
   </header>
   <main>
-      <section>
-        <h2>Link to home page</h2>
-        <p>
-          Our client is the imaginary band Excellence.
-        </p>
-        <p>
-          <strong>Note:</strong> The website will not work from file:// if you use Chrome due to restrictions on cross-origin requests. An online version is hosted below on folk.ntnu.no:
-        </p>
-        <p>
-          <a target="_blank" href="http://folk.ntnu.no/haavabj/Webtek/?home">EXCELLENCE home page</a><br/>
-          <a target="_blank" href="index.html">EXCELLENCE home page (local)</a><br/>
-        </p>
-      </section>
+    <section>
+      <h2>Link to home page</h2>
+      <p>
+        Our client is the imaginary band Excellence.
+      </p>
+      <p>
+        <strong>Note:</strong> The website will not work from file:// if you use Chrome due to restrictions on cross-origin requests. An online version is hosted below on folk.ntnu.no:
+      </p>
+      <p>
+        <a target="_blank" href="http://folk.ntnu.no/haavabj/Webtek/?home">EXCELLENCE home page</a><br/>
+        <a target="_blank" href="index.html">EXCELLENCE home page (local)</a><br/>
+      </p>
+    </section>
 
-      <section>
-          <h2>Changes to the specification</h2>
-          <p>
-            <strong>Navbar transparency:</strong> On the home page, the navbar was made transparent in order to blend better with the background. This decision was made for aesthetic reasons.
-            This was implemented as a CSS rule specifically for the home.html document.
-          </p>
-          <p>
-            <strong>Font sizes:</strong> Font sizes in general were changed due to the mockups being made in Photoshop, which did not measure the size of elements in screen-size pixels. Sizes in pixels were changed into relative "em" sizes, making it more predictable when working with high DPI screens such as mobile devices.
-          </p>
-          <p>
-            <strong>Mobile fixes:</strong> In order to further facilitate a mobile version, a minimized version of the navbar (commonly referred to as a hamburger) was added when browsing from a mobile device. The usability of this version was significantly better than the normal navbar, because it does not require precision to hit the links. In addition to this, margins and other spacing was reduced when browsing from a high-resolution device in order to make it more readable.
-          </p>
-          <p>
-            <strong>Removing a header image:</strong> On the video.html page, the header image was removed, seeing as it would be superfluous when there are videos on the page.
-          </p>
-          <p>
-            <strong>Adding shadows:</strong> On the home.html page, shadow was added to the large Excellence text in the center of the page, in order to make it more visible.
-          </p>
-      </section>
-      <section>
-        <h2>Fulfilling the minimum requirements</h2>
-            <p>This is how each team member fulfilled their minimum requirements:</p>
-            <ul>
-              <li><strong>Sigrid</strong> fulfilled her JavaScript requirements with the discography.js file, which generated albums from Javascript to keep the HTML docyment dry.</li>
-              <li> <strong>Caroline</strong> wrote splash_image.js which makes the front image fade in. </li>
-              <li><strong>Kristoffer</strong> wrote severel of the functions in navbar.js to create the 2 dropdown navigationbars.</li>
-              <li><strong>Håvard</strong> wrote guestbook.js which creates a guestbook where the user can leave a comment, and documentloader.js which dynamically loads pages and stylesheets.</li>
-            </ul>
-        <h2>Final work division </h2>
-        <p>Based on the work division from P2 this is the updated version on how the work was divided:</p>
-            <table>
-              <tr>
-                <th>File</th>
-                <th>Assigned person</th>
-              </tr>
-            <tr>
-              <td>index.html</td>
-              <td>All</td>
-            </tr>
-            <tr>
-              <td>home.html</td>
-              <td>Sigrid</td>
-            </tr>
-            <tr>
-              <td>about.html</td>
-              <td>Håvard</td>
-            </tr>
-            <tr>
-              <td>faq.html</td>
-              <td>Kristoffer</td>
-            </tr>
-            <tr>
-              <td>discography.html</td>
-              <td>Sigrid</td>
-            </tr>
-            <tr>
-              <td>tourdates.html</td>
-              <td>Sigrid</td>
-            </tr>
-            <tr>
-              <td>pictures.html</td>
-              <td>Caroline</td>
-            </tr>
-            <tr>
-              <td>video.html</td>
-              <td>Kristoffer</td>
-            </tr>
-            <tr>
-              <td>contactus.html</td>
-              <td>Caroline</td>
-            </tr>
-            <tr>
-              <td>guestbook.html</td>
-              <td>Håvard</td>
-            </tr>
-            <tr>
-              <td>main.css</td>
-              <td>All</td>
-            </tr>
-            <tr>
-              <td>home.css</td>
-              <td>All</td>
-            </tr>
-            <tr>
-              <td>guestbook.js</td>
-              <td>Håvard</td>
-            </tr>
-            <tr>
-              <td>splash_image.js</td>
-              <td>Caroline</td>
-            </tr>
-            <tr>
-              <td>document_loader.js</td>
-              <td>Håvard</td>
-            </tr>
-            <tr>
-              <td>discography.js</td>
-              <td>Sigrid</td>
-            </tr>
-            <tr>
-              <td>dropdown.js</td>
-              <td>Kristoffer</td>
-            </tr>
-            </table>
+    <section>
+      <h2>Changes to the specification</h2>
+      <p>
+        <strong>Navbar transparency:</strong> On the home page, the navbar was made transparent in order to blend better with the background. This decision was made for aesthetic reasons.
+        This was implemented as a CSS rule specifically for the home.html document.
+      </p>
+      <p>
+        <strong>Font sizes:</strong> Font sizes in general were changed due to the mockups being made in Photoshop, which did not measure the size of elements in screen-size pixels. Sizes in pixels were changed into relative "em" sizes, making it more predictable when working with high DPI screens such as mobile devices.
+      </p>
+      <p>
+        <strong>Mobile fixes:</strong> In order to further facilitate a mobile version, a minimized version of the navbar (commonly referred to as a hamburger) was added when browsing from a mobile device. The usability of this version was significantly better than the normal navbar, because it does not require precision to hit the links. In addition to this, margins and other spacing was reduced when browsing from a high-resolution device in order to make it more readable.
+      </p>
+      <p>
+        <strong>Removing a header image:</strong> On the video.html page, the header image was removed, seeing as it would be superfluous when there are videos on the page.
+      </p>
+      <p>
+        <strong>Adding shadows:</strong> On the home.html page, shadow was added to the large Excellence text in the center of the page, in order to make it more visible.
+      </p>
+    </section>
+    <section>
+      <h2>Fulfilling the minimum requirements</h2>
+        <p>This is how each team member fulfilled their minimum requirements:</p>
+        <ul>
+          <li><strong>Sigrid</strong> fulfilled her JavaScript requirements with the discography.js file, which generated albums from Javascript to keep the HTML docyment dry.</li>
+          <li> <strong>Caroline</strong> wrote splash_image.js which makes the front image fade in. </li>
+          <li><strong>Kristoffer</strong> wrote severel of the functions in navbar.js to create the 2 dropdown navigationbars.</li>
+          <li><strong>Håvard</strong> wrote guestbook.js which creates a guestbook where the user can leave a comment, and documentloader.js which dynamically loads pages and stylesheets.</li>
+        </ul>
+      <h2>Final work division </h2>
+      <p>Based on the work division from P2 this is the updated version on how the work was divided:</p>
+      <table>
+        <tr>
+          <th>File</th>
+          <th>Assigned person</th>
+        </tr>
+      <tr>
+        <td>index.html</td>
+        <td>All</td>
+      </tr>
+      <tr>
+        <td>home.html</td>
+        <td>Sigrid</td>
+      </tr>
+      <tr>
+        <td>about.html</td>
+        <td>Håvard</td>
+      </tr>
+      <tr>
+        <td>faq.html</td>
+        <td>Kristoffer</td>
+      </tr>
+      <tr>
+        <td>discography.html</td>
+        <td>Sigrid</td>
+      </tr>
+      <tr>
+        <td>tourdates.html</td>
+        <td>Sigrid</td>
+      </tr>
+      <tr>
+        <td>pictures.html</td>
+        <td>Caroline</td>
+      </tr>
+      <tr>
+        <td>video.html</td>
+        <td>Kristoffer</td>
+      </tr>
+      <tr>
+        <td>contactus.html</td>
+        <td>Caroline</td>
+      </tr>
+      <tr>
+        <td>guestbook.html</td>
+        <td>Håvard</td>
+      </tr>
+      <tr>
+        <td>main.css</td>
+        <td>All</td>
+      </tr>
+      <tr>
+        <td>home.css</td>
+        <td>All</td>
+      </tr>
+      <tr>
+        <td>guestbook.js</td>
+        <td>Håvard</td>
+      </tr>
+      <tr>
+        <td>splash_image.js</td>
+        <td>Caroline</td>
+      </tr>
+      <tr>
+        <td>document_loader.js</td>
+        <td>Håvard</td>
+      </tr>
+      <tr>
+        <td>discography.js</td>
+        <td>Sigrid</td>
+      </tr>
+      <tr>
+        <td>dropdown.js</td>
+        <td>Kristoffer</td>
+      </tr>
+      </table>
 
-        <h2>How was modularity handled?</h2>
-            <p>Modularity is handled by only loading the &lt;main&gt; component per page, along with a couple of style sheets where applicable. The Javascript code for this is found in document_loader.js. It uses XMLHttpRequests to download the .html files (which only contain &lt;main&gt;) and replaces the current &lt;main&gt; element. This allows the website to transition between the pages without blinking or reloading the navbar and footer.</p>
+      <h2>How was modularity handled?</h2>
+      <p>Modularity is handled by only loading the &lt;main&gt; component per page, along with a couple of style sheets where applicable. The Javascript code for this is found in document_loader.js. It uses XMLHttpRequests to download the .html files (which only contain &lt;main&gt;) and replaces the current &lt;main&gt; element. This allows the website to transition between the pages without blinking or reloading the navbar and footer. In addition to this, this method controls the active stylesheets and Javascript files.</p>
     </section>
 
     <footer>
